<resources>
    <string name="app_name">TelyuConsign</string>
    <string name="search_text">Search in Telyu Consign</string>
    <string name="nav_home">Home</string>
    <string name="nav_add">Sell Now!</string>
    <string name="nav_transaction">Transaction</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="add_fragment">Add Fragment\n</string>
    <string name="transaction_fragment">Transaction Fragment\n</string>
    <string name="login_text">Login</string>
    <string name="started_title">Hi Telyutizen</string>
    <string name="started_sub_title">Nice to meet u, enjoy our app\nLogin if you already have an account.\nRegister to get started with the App</string>
    <string name="ilustration_img">ilustration image\n</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">SIGN IN</string>
    <string name="text_signUp">Sign Up</string>
    <string name="text_detail_signUp">Welcome to Telyu Consign!</string>
    <string name="text_signIn">Sign In</string>
    <string name="text_detail_signIn">Welcome Back To Telyu Consign!</string>
    <string name="bottom_signUp">Dengan menekan \"SIgn Up\", anda telah menyetujui</string>
    <string name="skip_fornow">Skip for Now</string>
    <string name="searchbar_hint">Search</string>
    <string name="sign_in_text">Sign In</string>
    <string name="google_login">Sign In with Google</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">Don`t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="fullname">Fullname</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_reset">Password Reset</string>
    <string name="we_will_send_you_a_link_to_reset_your_password">We will send you a link to reset your password</string>
    <string name="submit">SUBMIT</string>
    <string name="chat">Chat</string>
    <string name="content_description_media">Descrption</string>
    <string name="namaBarang">Asus ROG Flow X13</string>
    <string name="desc_barang">RTX 4070 Ryzen 5 Gen 5 RAM 16GB SSD 1TB</string>
    <string name="kondisiBarang">New</string>
    <string name="hargaBarang">Rp. 10.000.000</string>
    <string name="text_suggested_item">Suggested Item</string>
    <string name="text_bedroom_item">Bedroom Item</string>
    <string name="categori_1">Furniture</string>
    <string name="text_categories">Categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">%1$s diklik!</string>
    <string name="categori_2">Vehicle</string>
    <string name="categori">Electronics</string>
    <string name="categori_3">Kitchen</string>
    <string name="categori_4">Sports</string>
    <string name="namaBarangIp">Iphone 14</string>
    <string name="desc_barang_ip">Storage 256GB A16 Bionic 6GB RAM</string>
    <string name="hargaBarangIp">Rp. 18.999.000</string>
    <string name="namaBarangMac">MacBook Pro 14 inch</string>
    <string name="desc_barang_mac">M1 Pro 512GB SSD 16GB RAM</string>
    <string name="hargaBarangMac">Rp. 26.999.000</string>
    <string name="namaBarangRak">Rak Baju</string>
    <string name="desc_barang_rak">Rak baju dua tingkat 150x110</string>
    <string name="hargaBarangRak">Rp. 135.000</string>
    <string name="namaBarangMeja">Meja Belajar</string>
    <string name="desc_barang_meja">Meja Bejalajar dengan laci 100cm x 53.50cm x 76.5cm</string>
    <string name="hargaBarang_meja">Rp. 450.000</string>
    <string name="namaBarangKarpet">Karpet Busa</string>
    <string name="desc_barang_karpet">Karpet dengan bantalan busa berukuran 210x150</string>
    <string name="hargaBarangKarpet">Rp. 250.000</string>
    <string name="select_category">Select Category</string>
    <string name="categories">Categories</string>
    <string name="password_min">Password minimum 8 character</string>
    <string name="fill_but_signIn">Fill the form</string>
    <string name="login_but_signIn">Login</string>
    <string name="must_login">Login first to use chat!</string>
    <string name="login">Login here!</string>
    <string name="logout">Logout</string>
    <string name="Profile">Profile</string>
    <string name="sell_item">Sell Item</string>
    <string name="item_name">Item Name</string>
    <string name="preview_image_view">Preview image view</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="price_rupiah">Price (Rupiah)</string>
    <string name="use_item">Used</string>
    <string name="new_item">New</string>
    <string name="sell">Sell</string>
    <string-array name="category_options">
        <item>Electronic</item>
        <item>Furniture</item>
        <item>Kitchen</item>
        <item>Vehicle</item>
        <item>Sports</item>
        <item>Other</item>
    </string-array>
    <string name="upload_ktm">Upload a picture your student card with your face.</string>
    <string name="verif_ktm">Verification First</string>
    <string name="next">Process\n</string>
    <string name="take_picture">Take a picture now</string>
    <string name="inf">*Make sure your face and cards are visible clearly..</string>
</resources>