<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="186dp"
                android:layout_height="194dp"
                android:contentDescription="@string/content_description_media"
                android:padding="30dp"
                android:scaleType="centerCrop"
                android:id="@+id/imageViewBarang" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewNamaBarang"
                    android:text="Nama Barang"
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <TextView
                    android:id="@+id/textViewDeskripsiBarang"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/desc_barang"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:id="@+id/textViewHargaBarang"
                    android:text="@string/hargaBarang"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/categoriesBarang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Categories"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:id="@+id/textViewKondisiBarang"
                    android:text="@string/kondisiBarang"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="@color/green" />

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>